--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>desec-webapp</title>
+    <title>deSEC DNS Console</title>
+    <!--
+    TODO
+    - Get rid of external font
+    -->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
   </head>
   <body>
     <div id="app"></div>
